<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nev_header">
    <item
        android:id = "@+id/action_home"
        android:enabled = "true"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id = "@+id/contacts"
        android:enabled = "true"
        android:title="@string/users"
        app:showAsAction="ifRoom" />
    <item
        android:id = "@+id/ChatList"
        android:enabled = "true"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />
    <item
        android:id = "@+id/more"
        android:enabled = "true"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>