<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorTransparentWhite"
    android:fitsSystemWindows="true"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="633dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="499dp"
            android:layout_height="266dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/knight" />

        <TextView
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorPink"
            android:textSize="20dp"
            app:fontFamily="@font/josefinslabbold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="107dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/colorPink"
            android:textSize="14dp"
            app:fontFamily="@font/josefinslabitalic" />


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTransparentPink"
                android:textColorHint="@android:color/white"
                app:fontFamily="@font/poiretoneregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundbutton"
            android:text="@string/btn_reset_password"
            android:textColor="@color/colorTransparentWhite"
            app:fontFamily="@font/josefinslabbold" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="281dp"
            android:layout_height="307dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/colorPink"
            app:fontFamily="@font/josefinslabbold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>